--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <footer class="page-footer container">
     <div class="footer-contacts">
       <h2 class="visually-hidden">О нас</h2>
-      <p class="footer-tag"><a href="">#visitSEDONA</a></p>
+      <p class="footer-tag">#visitSEDONA</p>
       <p class="footer-phone">ТЕЛ: <a href="">+7(495) 666-01-66</a></p>
     </div>
 
@@ -159,7 +159,7 @@
       </li>
       <li class="social-item">
         <a class="social-link" href="#">
-          <svg class="social-item-icon" width="12" height="17" viewBox="0 0 12 22" fill="none"
+          <svg class="social-item-icon" width="12" height="22" viewBox="0 0 12 22" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
           </svg>
