--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="footer-contacts">
       <h2 class="visually-hidden">О нас</h2>
       <p class="footer-tag">#visitSEDONA</p>
-      <p class="footer-phone">ТЕЛ: <a href="">+7(495) 666-01-66</a></p>
+      <p class="footer-phone">ТЕЛ: <a href="tel: +74956660166">+7(495) 666-01-66</a></p>
     </div>
 
     <ul class="social-list">
