--- a/hotels.html
+++ b/hotels.html
@@ -101,7 +101,7 @@
             </div>
           </fieldset>
 
-            <button class="show-hotels-button" type="submit">показать</button>
+          <button class="show-hotels-button" type="submit">показать</button>
 
         </div>
       </form>
@@ -109,35 +109,39 @@
 
     <section class="result">
       <div class="filters">
-        <span class="filters-result">найдено: 3</span>
-        <span class="filters-sort">сортировка:</span>
-        <ul class="sorting-list">
-          <li class="sorting-item">
-            <a href="">по цене</a>
-          </li>
-          <li class="sorting-item">
-            <a href="">по типу</a>
-          </li>
-          <li class="sorting-item">
-            <a href="">по рейтингу</a>
-          </li>
-        </ul>
-        <ul class="arrows">
-          <li>
-            <a href="#">
-              <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M5.5 0L0 10H11L5.5 0Z" fill="#CACACA" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M5.5 10L0 0H11" fill="#81B3D2" />
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="sorting">
+          <span class="filters-result">найдено: 3</span>
+          <span class="filters-sort">сортировка:</span>
+          <ul class="sorting-list">
+            <li class="sorting-item">
+              <a href="">по цене</a>
+            </li>
+            <li class="sorting-item">
+              <a href="">по типу</a>
+            </li>
+            <li class="sorting-item">
+              <a href="">по рейтингу</a>
+            </li>
+          </ul>
+        </div>
+        <div class="arrows">
+          <ul class="arrows-list">
+            <li class="arrows-item up-arrow">
+              <a href="#">
+                <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M5.5 0L0 10H11L5.5 0Z" fill="#CACACA" />
+                </svg>
+              </a>
+            </li>
+            <li class="arrows-item down-arrow">
+              <a href="#">
+                <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M5.5 10L0 0H11" fill="#CACACA" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
 
       <div class="search-result">
