--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
         и мы покажем вам лучшие предложения гостиниц в седоне
       </p>
       <form class="search-form">
-        <button class="button button-primary" type="submit">поиск гостиницы в седоне</button>
+        <button class="button button-primary" type="button">поиск гостиницы в седоне</button>
       </form>
     </section>
     <section class="map"></section>
 
   </main>
 
-  <footer class="page-footer container">
+  <footer class="page-footer container main-footer">
     <div class="footer-contacts">
       <h2 class="visually-hidden">О нас</h2>
       <p class="footer-tag">#visitSEDONA</p>
