--- a/hotels.html
+++ b/hotels.html
@@ -28,7 +28,7 @@
           <a class="site-nav-link" href="#">карта штата</a>
         </li>
         <li class="site-nav-item site-nav-item-right">
-          <a class="site-nav-link" href="/hotels.html">гостиницы</a>
+          <a class="site-nav-link visited" href="/hotels.html">гостиницы</a>
         </li>
       </ul>
     </nav>
@@ -114,13 +114,13 @@
           <span class="filters-sort">сортировка:</span>
           <ul class="sorting-list">
             <li class="sorting-item">
-              <a href="">по цене</a>
+              <a class="sorting-link sorting-item-active" href="">по цене</a>
             </li>
             <li class="sorting-item">
-              <a href="">по типу</a>
+              <a class="sorting-link" href="">по типу</a>
             </li>
             <li class="sorting-item">
-              <a href="">по рейтингу</a>
+              <a class="sorting-link" href="">по рейтингу</a>
             </li>
           </ul>
         </div>
@@ -133,7 +133,7 @@
                 </svg>
               </a>
             </li>
-            <li class="arrows-item down-arrow">
+            <li class="arrows-item down-arrow active-arrow">
               <a href="#">
                 <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M5.5 10L0 0H11" fill="#CACACA" />
