--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="main-header container">
     <a class="main-header-logo" href="index.html">
       <img src="img/logo.svg" alt="Логотип" width="138" height="70">
-    </a>
+    </a>                                                                                                                                                        
     <nav class="main-nav">
       <ul class="site-nav">
         <li class="site-nav-item site-nav-item-left">
@@ -59,7 +59,7 @@
           <ul class="city-features">
             <li class="features-item-black">
               <img class="features-item-icon" src="img/house.svg" alt="Жилье" width="75" height="72">
-              <h3>жилье</h3>
+              <h3 class="item-img">жилье</h3>
               <p>
                 рекомендуем пожить в настоящем<br>
                 мотеле, все как в кино!
@@ -131,8 +131,11 @@
         укажите предпологаемые даты поездки,<br>
         и мы покажем вам лучшие предложения гостиниц в седоне
       </p>
-      <form class="search-form">
+      <div>
         <button class="button button-primary" type="button">поиск гостиницы в седоне</button>
+      </div>
+      <form class="search-form">
+        
       </form>
     </section>
     <section class="map"></section>
