--- a/hotels.html
+++ b/hotels.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-
-  <header class="main-header container">
+<div class="container">
+  <header class="main-header">
     <a class="main-header-logo" href="index.html">
       <img src="img/logo.svg" alt="Логотип" width="138" height="70">
     </a>
@@ -34,7 +34,7 @@
     </nav>
   </header>
 
-  <main class="main container">
+  <main class="main">
     <section class="hotels-filter">
       <form class="hotels-form" action="">
         <div class="hotels-form-fieldset">
@@ -175,9 +175,7 @@
             </div>
           </li>
           <li class="search-result-item">
-
             <img src="img/villas.jpg" width="135" height="90" alt="Вилас">
-
             <div class="search-result-info">
               <h3>villas at poco diablo</h3>
               <span>апартаменты</span>
@@ -194,7 +192,7 @@
     </section>
   </main>
 
-  <footer class="page-footer container">
+  <footer class="page-footer">
     <div class="footer-contacts">
       <h2 class="visually-hidden">О нас</h2>
       <p class="footer-tag">#visitSEDONA</p>
@@ -245,6 +243,7 @@
       </a>
 
     </div>
+  </div>
   </footer>
 
 </body>
