--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body class="page-body">
-
-  <header class="main-header container">
+<div class="container">
+  <header class="main-header">
     <a class="main-header-logo" href="index.html">
       <img src="img/logo.svg" alt="Логотип" width="138" height="70">
     </a>                                                                                                                                                        
@@ -33,7 +33,7 @@
     </nav>
   </header>
 
-  <main class="main container">
+  <main class="main">
     <h1 class="visually-hidden">Туристический портал города Седона</h1>
     <section class="banner">
       <img class="banner-img" src="img/welcome.svg" alt="Седона" width="457" height="351">
@@ -51,30 +51,30 @@
             <h3>Настоящий городок</h3>
             <span>— №1 —</span>
             <p>
-              Седона - не аттракцион для туристов, там<br>
+              Седона- не аттракцион для туристов, там
               течёт своя жизнь
             </p>
           </div>
           <img src="img/town.jpg" width="800" height="256" alt="Город">
           <ul class="city-features">
-            <li class="features-item-black">
-              <img class="features-item-icon" src="img/house.svg" alt="Жилье" width="75" height="72">
-              <h3 class="item-img">жилье</h3>
+            <li class="features-item-black features-item-black-house">
+              <!-- <img class="features-item-icon" src="img/house.svg" alt="Жилье" width="75" height="72"> -->
+              <h3>жилье</h3>
               <p>
                 рекомендуем пожить в настоящем<br>
                 мотеле, все как в кино!
               </p>
             </li>
-            <li class="features-item-black">
-              <img class="features-item-icon" src="img/burger.svg" alt="Еда" width="75" height="70">
+            <li class="features-item-black features-item-black-food">
+              <!-- <img class="features-item-icon" src="img/burger.svg" alt="Еда" width="75" height="70"> -->
               <h3>еда</h3>
               <p>
                 всегда заказывайте фирменный бургер,<br>
                 вы не разочаруетесь!
               </p>
             </li>
-            <li class="features-item-black">
-              <img class="features-item-icon" src="img/present.svg" alt="Сувениры" width="64" height="77">
+            <li class="features-item-black features-item-black-present">
+              <!-- <img class="features-item-icon" src="img/present.svg" alt="Сувениры" width="64" height="77"> -->
               <h3>сувениры</h3>
               <p>
                 не только китайского, но и местного<br>
@@ -97,7 +97,7 @@
         <li class="features-list">
           <ul class="city-features-bottom">
             <li class="features-item-black features-item-black-bottom">
-              <h3>Небольшая площадь</h3>
+              <h3>Небольшая<br>площадь</h3>
               <span>— №3 —</span>
               <p>
                 все достопримечательности<br>
@@ -105,7 +105,7 @@
               </p>
             </li>
             <li class="features-item-black features-item-black-bottom">
-              <h3>Красивая дорога</h3>
+              <h3>Красивая<br>дорога</h3>
               <span>— №4 —</span>
               <p>
                 ехать в седону из лас-вегаса совсем<br>
@@ -113,7 +113,7 @@
               </p>
             </li>
             <li class="features-item-black features-item-black-bottom">
-              <h3>Мало туристов</h3>
+              <h3>Мало<br>туристов</h3>
               <span>— №5 —</span>
               <p>
                 большинство едет в гранд каньон!<br>
@@ -142,7 +142,7 @@
 
   </main>
 
-  <footer class="page-footer container main-footer">
+  <footer class="page-footer main-footer">
     <div class="footer-contacts">
       <h2 class="visually-hidden">О нас</h2>
       <p class="footer-tag">#visitSEDONA</p>
@@ -194,7 +194,7 @@
 
     </div>
   </footer>
-
+</div>
 </body>
 
 </html>
