частично сделал форму

--- a/hotels.html
+++ b/hotels.html
@@ -155,7 +155,7 @@
               <a class="details" href="#">подробнее</a>
               <a class="book" href="#">забронировать</a>
             </div>
-            <div class="search-result-rating">
+            <div class="search-result-rating four-stars-rating">
               <span>рейтинг: 8,5</span>
             </div>
           </li>
@@ -170,7 +170,7 @@
               <a class="details" href="#">подробнее</a>
               <a class="book" href="#">забронировать</a>
             </div>
-            <div class="search-result-rating">
+            <div class="search-result-rating three-stars-rating">
               <span>рейтинг: 8,9</span>
             </div>
           </li>
@@ -183,7 +183,7 @@
               <a class="details" href="#">подробнее</a>
               <a class="book" href="#">забронировать</a>
             </div>
-            <div class="search-result-rating">
+            <div class="search-result-rating two-stars-rating">
               <span>рейтинг: 9,2</span>
             </div>
           </li>
