правки по форме

--- a/hotels.html
+++ b/hotels.html
@@ -95,8 +95,8 @@
                   <div class="scale">
                     <div class="bar"></div>
                   </div>
-                  <div class="toggle toggle-min"></div>
-                  <div class="toggle toggle-max"></div>
+                  <button type="button" class="toggle toggle-min"></button>
+                  <button type="button" class="toggle toggle-max"></button>
                 </div>
               </div>
             </fieldset>
