добавил интерактив форме и доступность

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
             <img src="img/town.jpg" width="800" height="256" alt="Город">
             <ul class="city-features">
               <li class="features-item-black features-item-black-house">
-                <!-- <img class="features-item-icon" src="img/house.svg" alt="Жилье" width="75" height="72"> -->
                 <h3>жилье</h3>
                 <p>
                   рекомендуем пожить в настоящем<br>
@@ -66,7 +65,6 @@
                 </p>
               </li>
               <li class="features-item-black features-item-black-food">
-                <!-- <img class="features-item-icon" src="img/burger.svg" alt="Еда" width="75" height="70"> -->
                 <h3>еда</h3>
                 <p>
                   всегда заказывайте фирменный бургер,<br>
@@ -74,7 +72,6 @@
                 </p>
               </li>
               <li class="features-item-black features-item-black-present">
-                <!-- <img class="features-item-icon" src="img/present.svg" alt="Сувениры" width="64" height="77"> -->
                 <h3>сувениры</h3>
                 <p>
                   не только китайского, но и местного<br>
@@ -126,6 +123,7 @@
       </section>
 
       <section class="form">
+        <span class="visually-hidden">Форма поиска гостиницы в Седоне</span>
         <h2>Заинтересовались?</h2>
         <p>
           укажите предпологаемые даты поездки,<br>
@@ -157,28 +155,28 @@
             <div class="form-field form-field-row">
               <p class="form-field-row-label">
               <button class="form-field-button-minus minus-primary"  type="button">
-                <svg width="12" height="3" viewBox="0 0 12 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="12" height="3" viewBox="0 0 12 3" fill="#A9A9A9" xmlns="http://www.w3.org/2000/svg">
                   <rect width="12" height="3" fill="#A9A9A9"/>
                   </svg>
               </button>
               <label for="adults">взрослые:</label>
               <input type="text" id="adults" placeholder="2">
               <button class="form-field-button-plus plus-primary" type="button">
-                <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="11" height="11" viewBox="0 0 11 11" fill="#A9A9A9" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z" fill="#A9A9A9"/>
                   </svg>
               </button>
             </p>
             <p class="form-field-label">
               <button class="form-field-button-minus minus-secondary"  type="button">
-                <svg  width="12" height="3" viewBox="0 0 12 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg  width="12" height="3" viewBox="0 0 12 3" fill="#A9A9A9" xmlns="http://www.w3.org/2000/svg">
                   <rect width="12" height="3" fill="#A9A9A9"/>
                   </svg>
               </button>
               <label for="children">дети:</label>
               <input type="text" id="children" placeholder="3">
               <button class="form-field-button-plus plus-secondary"  type="button">
-                <svg  width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg  width="11" height="11" viewBox="0 0 11 11" fill="#A9A9A9" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z" fill="#A9A9A9"/>
                   </svg>
               </button>
@@ -202,6 +200,7 @@
       <ul class="social-list">
         <li class="social-item">
           <a class="social-link" href="#">
+            <span class="visually-hidden">Страницы Вконтакте</span>
             <svg class="social-item-icon" width="17" height="17" viewBox="0 0 17 17" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -212,6 +211,7 @@
         </li>
         <li class="social-item">
           <a class="social-link" href="#">
+            <span class="visually-hidden">Страница Твиттер</span>
             <svg class="social-item-icon" width="12" height="22" viewBox="0 0 12 22" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
@@ -220,6 +220,7 @@
         </li>
         <li class="social-item">
           <a class="social-link" href="#">
+            <span class="visually-hidden">Ютуб канал</span>
             <svg class="social-item-icon" width="20" height="16" viewBox="0 0 20 16" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
