--- a/hotels.html
+++ b/hotels.html
@@ -149,11 +149,15 @@
             <li class="search-result-item">
               <img src="img/amara-resort.jpg" width="135" height="90" alt="Амара ресорт">
               <div class="search-result-info">
-                <h3>amara resort & spa</h3>
-                <span>гостиница</span>
-                <span>от 4000 р.</span>
-                <a class="details" href="#">подробнее</a>
-                <a class="book" href="#">забронировать</a>
+                <div>
+                  <h3>amara resort & spa</h3>
+                  <span>гостиница</span>
+                  <span>от 4000 р.</span>
+                </div>
+                <div>
+                  <a class="details" href="#">подробнее</a>
+                  <a class="book" href="#">забронировать</a>
+                </div>
               </div>
               <div class="search-result-rating four-stars-rating">
                 <span>рейтинг: 8,5</span>
@@ -164,11 +168,15 @@
               <img src="img/desert-quail.jpg" width="135" height="90" alt="Дезерт">
 
               <div class="search-result-info">
+                <div>
                 <h3>desert quail inn</h3>
                 <span>мотель</span>
                 <span>от 3000 р.</span>
+              </div>
+              <div>
                 <a class="details" href="#">подробнее</a>
                 <a class="book" href="#">забронировать</a>
+              </div>
               </div>
               <div class="search-result-rating three-stars-rating">
                 <span>рейтинг: 8,9</span>
@@ -177,11 +185,15 @@
             <li class="search-result-item">
               <img src="img/villas.jpg" width="135" height="90" alt="Вилас">
               <div class="search-result-info">
+                <div>
                 <h3>villas at poco diablo</h3>
                 <span>апартаменты</span>
                 <span>от 2000 р.</span>
+              </div>
+              <div>
                 <a class="details" href="#">подробнее</a>
                 <a class="book" href="#">забронировать</a>
+              </div>
               </div>
               <div class="search-result-rating two-stars-rating">
                 <span>рейтинг: 9,2</span>
@@ -202,6 +214,7 @@
       <ul class="social-list">
         <li class="social-item">
           <a class="social-link" href="#">
+            <span class="visually-hidden">Страница Вконтакте</span>
             <svg class="social-item-icon" width="17" height="17" viewBox="0 0 17 17" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -212,6 +225,7 @@
         </li>
         <li class="social-item">
           <a class="social-link" href="#">
+            <span class="visually-hidden">Страница Твиттер</span>
             <svg class="social-item-icon" width="12" height="22" viewBox="0 0 12 22" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
@@ -220,6 +234,7 @@
         </li>
         <li class="social-item">
           <a class="social-link" href="#">
+            <span class="visually-hidden">Ютуб канал</span>
             <svg class="social-item-icon" width="20" height="16" viewBox="0 0 20 16" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
