--- a/hotels.html
+++ b/hotels.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -10,8 +10,8 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
-  <div class="container">
+<body class="page-body">
+  <div class="container hotels-container">
     <header class="main-header">
       <a class="main-header-logo" href="index.html">
         <img src="img/logo.svg" alt="Логотип" width="138" height="70">
@@ -151,8 +151,8 @@
             <li class="search-result-item">
               <img src="img/amara-resort.jpg" width="135" height="90" alt="Амара ресорт">
               <div class="search-result-info">
+                <a class="search-result-item-link" href="#">amara resort & spa</a>
                 <div>
-                  <h3>amara resort & spa</h3>
                   <span>гостиница</span>
                   <span>от 4000 р.</span>
                 </div>
@@ -170,15 +170,15 @@
               <img src="img/desert-quail.jpg" width="135" height="90" alt="Дезерт">
 
               <div class="search-result-info">
+                <a class="search-result-item-link" href="#">desert quail inn</a>
                 <div>
-                <h3>desert quail inn</h3>
-                <span>мотель</span>
-                <span>от 3000 р.</span>
-              </div>
-              <div>
-                <a class="details" href="#">подробнее</a>
-                <a class="book" href="#">забронировать</a>
-              </div>
+                  <span>мотель</span>
+                  <span>от 3000 р.</span>
+                </div>
+                <div>
+                  <a class="details" href="#">подробнее</a>
+                  <a class="book" href="#">забронировать</a>
+                </div>
               </div>
               <div class="search-result-rating three-stars-rating">
                 <span>рейтинг: 8,9</span>
@@ -187,15 +187,15 @@
             <li class="search-result-item">
               <img src="img/villas.jpg" width="135" height="90" alt="Вилас">
               <div class="search-result-info">
+                <a class="search-result-item-link" href="#">villas at poco diablo</a>
                 <div>
-                <h3>villas at poco diablo</h3>
-                <span>апартаменты</span>
-                <span>от 2000 р.</span>
-              </div>
-              <div>
-                <a class="details" href="#">подробнее</a>
-                <a class="book" href="#">забронировать</a>
-              </div>
+                  <span>апартаменты</span>
+                  <span>от 2000 р.</span>
+                </div>
+                <div>
+                  <a class="details" href="#">подробнее</a>
+                  <a class="book" href="#">забронировать</a>
+                </div>
               </div>
               <div class="search-result-rating two-stars-rating">
                 <span>рейтинг: 9,2</span>
