pixel perfect+js

--- a/hotels.html
+++ b/hotels.html
@@ -53,7 +53,7 @@
                 </li>
                 <li class="hotels-form-item">
                   <input class="visually-hidden filter-input-checkbox
-                filter-input" id="wi-fi" type="checkbox" disabled>
+                filter-input" id="wi-fi" type="checkbox">
                   <label for="wi-fi">wi-fi</label>
                 </li>
               </ul>
@@ -68,7 +68,7 @@
                 </li>
                 <li class="hotels-form-item">
                   <input class="visually-hidden filter-input-checkbox
-                filter-input" id="motel" type="checkbox" disabled checked>
+                filter-input" id="motel" type="checkbox" checked>
                   <label for="motel">мотель</label>
                 </li>
                 <li class="hotels-form-item">
