--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <rect width="12" height="3" fill="#A9A9A9" /> </svg>
                 </button>
                 <label for="adults">взрослые:</label>
-                <input class="form-input" type="text" id="adults" placeholder="2">
+                <input class="count-adults" type="text" id="adults" placeholder="2">
                 <button class="form-field-button-plus plus-primary" type="button">
                   <span class="visually-hidden">Кнопка плюс</span>
                   <svg width="11" height="11" viewBox="0 0 11 11" fill="#A9A9A9" xmlns="http://www.w3.org/2000/svg">
@@ -135,7 +135,7 @@
                   <svg width="12" height="3" viewBox="0 0 12 3" fill="#A9A9A9" xmlns="http://www.w3.org/2000/svg">
                     <rect width="12" height="3" fill="#A9A9A9" /> </svg> </button>
                 <label class="inner-label" for="children">дети:</label>
-                <input class="form-input" type="text" id="children" placeholder="3">
+                <input class="count-children" type="text" id="children" placeholder="3">
                 <button class="form-field-button-plus plus-secondary" type="button">
                   <span class="visually-hidden">Кнопка минус</span>
                   <svg width="11" height="11" viewBox="0 0 11 11" fill="#A9A9A9" xmlns="http://www.w3.org/2000/svg">
@@ -149,7 +149,7 @@
           </form>
         </div>
       </section>
-      <section class="map"></section>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13565774555!2d-111.8301578595786!3d34.854443815278216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1604600841917!5m2!1sru!2sru" width="1200" height="593" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </main>
     <footer class="page-footer main-footer">
       <div class="footer-contacts">
