--- a/hotels.html
+++ b/hotels.html
@@ -7,7 +7,7 @@
   <title>Отели города Седона</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="page-body">
@@ -259,11 +259,9 @@
               fill="#231F20" />
           </svg>
         </a>
-
       </div>
+    </footer>
   </div>
-  </footer>
-
 </body>
 
 </html>
