--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="features-item-inner">
               <h3>Настоящий<br> городок</h3> <span>&mdash;&nbsp;&#8470;&nbsp;1 &mdash;</span>
               <p>
-                <nobr>Седона - аттракцион</nobr> для туристов, там течёт своя жизнь
+                Седона - аттракцион для туристов, там течёт своя жизнь
               </p>
             </div> <img src="img/town.jpg" width="800" height="256" alt="Город">
             <ul class="city-features">
@@ -71,7 +71,7 @@
               </li>
               <li class="features-item-black features-item-black-bottom">
                 <h3>Красивая<br>дорога</h3> <span>&mdash;&nbsp;&#8470;&nbsp;4 &mdash;</span>
-                <p> ехать в&nbsp;седону из&nbsp;<nobr>лас-вегаса</nobr> совсем<br> не&nbsp;скучно! </p>
+                <p> ехать в&nbsp;седону из&nbsp;лас-вегаса совсем<br> не&nbsp;скучно! </p>
               </li>
               <li class="features-item-black features-item-black-bottom">
                 <h3>Мало<br>туристов</h3> <span>&mdash;&nbsp;&#8470;&nbsp;5 &mdash;</span>
@@ -87,7 +87,7 @@
           в&nbsp;седоне </p>
         <div class="toggle-form"> <button class="button button-primary" type="button">поиск гостиницы
             в&nbsp;седоне</button>
-          <form class="search-form">
+          <form class="search-form method=" GET" action="https://echo.htmlacademy.ru/">
             <div class="form-field">
               <label for="start">дата заезда:</label>
               <input class="trip-start" type="text" id="start" name="trip-start" placeholder="24 апреля 2017">
@@ -142,22 +142,25 @@
                     <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z"
                       fill="#A9A9A9" /> </svg>
-                     </button>
-                     </p>
+                </button>
+              </p>
             </div>
             <button class="form-button" type="submit">найти</button>
           </form>
         </div>
       </section>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13565774555!2d-111.8301578595786!3d34.854443815278216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1604600841917!5m2!1sru!2sru" width="1200" height="593" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13565774555!2d-111.8301578595786!3d34.854443815278216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1604600841917!5m2!1sru!2sru"
+        width="1200" height="593" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </main>
     <footer class="page-footer main-footer">
       <div class="footer-contacts">
         <h2 class="visually-hidden">О&nbsp;нас</h2>
         <p class="footer-tag">#visitSEDONA</p>
         <p class="footer-phone">ТЕЛ: <a href="tel: +74956660166">
-            <nobr>+7(495) 666-01-66</nobr>
-          </a></p>
+            +7(495) 666-01-66
+          </a>
+        </p>
       </div>
       <ul class="social-list">
         <li class="social-item"> <a class="social-link" href="#"> <span class="visually-hidden">Ссылка
@@ -188,7 +191,7 @@
       </div>
     </footer>
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
