правки по защите

--- a/hotels.html
+++ b/hotels.html
@@ -86,10 +86,12 @@
               <div class="range-filter">
                 <div class="price-controls">
                   <label class="price-control-min">
-                    от <input type="number" name="min-price" value="0">
+                    от
+                    <input type="text" name="min-price" value="0">
                   </label>
                   <label class="price-control-max">
-                    до <input type="number" name="max-price" value="3000">
+                    до
+                    <input type="text" name="max-price" value="3000">
                   </label>
                 </div>
                 <div class="range-controls">
@@ -103,9 +105,7 @@
                 </div>
               </div>
             </fieldset>
-
             <button class="show-hotels-button" type="submit">показать</button>
-
           </div>
         </form>
       </section>
@@ -168,9 +168,7 @@
               </div>
             </li>
             <li class="search-result-item">
-
               <img src="img/desert-quail.jpg" width="135" height="90" alt="Дезерт">
-
               <div class="search-result-info">
                 <a class="search-result-item-link" href="#">desert quail inn</a>
                 <div>
